--- a/index.html
+++ b/index.html
@@ -2,20 +2,32 @@
 <html lang="en"> 
 <head> 
    <!-- Required meta tags --> <meta      charset="utf-8"> 
-   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Bootstrap CSS --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <title>Home page</title>
+   
+   <link rel="stylesheet" href="index.css">
+   <!-- Bootstrap CSS -->  
+   <title>Home page</title>
 </head>
 <body>
-<div class="container">
-   <div class="button">
-      <button href="modal.html" position="top-left">click me</button>
-   </div>
-</div>
-<div>
-   
-</div>
-<script>
+   <div class="modal">
+      <div class="modal-content" position="center">
+      <p>Are you sure you want to continue</p>
+              <a href=""   dismiss="modal" onclick="myFunction_Yes()"> <button>Yes</button> </a> 
+         <a href="" dismiss="modal" onclick="myFunction_Cancel()"> <button>Cancel</button> </a> 
+      </div>
+    </div>
+    <script>
+    function myFunction_Yes() {
+        alert("You just clicked Yes!");
+}
+    function myFunction_Cancel() {
+        alert("You just clicked Cancel!");
+}
 
-
+    </script>
+      
+         </div>
+     </div>
+   <div>
 </body>
 </html>
 
